# acmensa-rs

./: Cargo.toml  cache-all.sh  readme.md
.cargo/: config.toml
acmensa-cli/: Cargo.toml
acmensa-cli/src/: args.rs  main.rs  pretty_print.rs
libacmensa/: Cargo.toml
libacmensa/src/: config.rs  lib.rs  meal.rs  scrape.rs
res/: mensen.toml  pretty-print.toml
static/: schema.json
