[package]
name = "libacmensa"
version = "0.1.0"
authors = ["kernzerfall"]
license = "EUPL-1.2-or-later"
edition = "2024"

[features]
default = []#["scrape"]
scrape = ["dep:regex", "dep:scraper", "dep:tokio", "dep:toml", "dep:reqwest"]
json-schema = ["dep:schemars", "dep:serde_json"]

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false, optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["default-tls"], default-features = false, optional = true }

[dependencies]
anyhow = "1.0.99"
lazy_static = "1.5.0"
log = "0.4.27"
regex = { version = "1.11", features = ["use_std"], optional = true }
schemars = { version = "1.0", optional = true }
scraper = { version = "0.24", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"], optional = true }
toml = { version = "0.9", optional = true }
